--- a/src/client/main.css
+++ b/src/client/main.css
@@ -12,6 +12,8 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  max-width: 900px;
+  margin: auto;
 }
 
 a {
