--- a/src/client/routes/root.css
+++ b/src/client/routes/root.css
@@ -11,9 +11,14 @@
 }
 
 .App-landing-hook > h1 {
-  font-size: 5vw;
+  font-size: 1.5rem;
   margin-right: 5vw;
   color: #3a3a3ade;
+  max-width: 333px;
+
+  @media (min-width: 400px) {
+    font-size: 2.5rem;
+  }
 }
 
 .App-landing-hook > img {
@@ -49,7 +54,14 @@
 
 .App-landing-steps__item > h2 {
   max-width: 300px;
+  font-size: 1rem;
+  margin-bottom: 8px;
+}
 
+.App-landing-steps__item > p {
+  max-width: 300px;
+  font-size: 1rem;
+  margin-top: 0px;
 }
 
 .logo {
